# discord

./: .example.env  .gitignore  LICENSE  README.md  acelerado.py  credentials.example.json  pyproject.toml
acelerado/: __main__.py  env.py  log.py  state.py  youtube.py
examples/: video.json  youtube.py
scripts/: acelerado.service  copy_systemd.sh  members_groups.py  run_service.sh  send_token.sh  update_youtube_token.py
